# internal/api/dto/post.go
@@ -1,7 +1,30 @@
 package dto
 
+import "time"
+
 type CreatePostReq struct {
 	Title       string `json:"title" binding:"required"`
 	Content     string `json:"content" binding:"required"`
 	CommunityID int64  `json:"community_id" binding:"required"`
+}
+
+type GetPostDetailReq struct {
+	PostID int64 `uri:"id" binding:"required"`
+}
+
+type PostDetail struct {
+	ID         int64     `json:"id"`      // 帖子id
+	Title      string    `json:"title"`   // 标题
+	Content    string    `json:"content"` // 内容
+	Status     int32     `json:"status"`  // 帖子状态
+	StatusText string    `json:"status_text"`
+	CreateTime time.Time `json:"create_time"` // 创建时间
+	UpdateTime time.Time `json:"update_time"` // 更新时间
+
+	AuthorName string          `json:"author_name"`
+	Community  CommunityDetail `json:"community"`
+}
+
+type GetPostDetailRes struct {
+	Post *PostDetail `json:"post"`
 }
